--- a/app/src/main/res/layout/activity_linear.xml
+++ b/app/src/main/res/layout/activity_linear.xml
@@ -10,10 +10,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerviewL"
         android:layout_width="match_parent"
-        tools:listitem="@layout/linear"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/linear" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
